2007-10-09  Emilio Meschi  <emilio.meschi@cern.ch>
	
	* tag V01-01-03
	* use clearCounters in enabling to reset all schedule counters via EP

2007-10-09  Emilio Meschi  <emilio.meschi@cern.ch>
	
	* tag V01-01-02
	* fix halting to call detachDqmFromShm only when shm is present

2007-08-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-01-00
	* fixed bug in handling state transition in case of bad configuration
	* removed PLUGIN_PATH from web page
	* removed MonitorDaemon initialization (obsolete)
	* added reasonForFailed to web page
	* mispace -> monitorInfoSpace_

2007-07-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-00-05
	* create monitorable infospace the xdaq3.9 (xmas) way

2007-03-26  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-11-02
	* compliant with edm::EventProcessor for pre2
	* based on evf::StateMachine provided by EventFilter/Utilities
	V00-12-00
	* stopping and halting logic now should function properly

2007-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-01
	* ready to go back in the nightly! :)
	* reverted to od halting strategy (edm::EP::shutDownAsync() instead
	of edm::EP::stopAsync()), edm::EP needs to be enabled to cleanly
	stop first, note that 'Stop' command won't work properly for
	current FUEventProcessor

2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-00
	* collect fixes commited by Chris Y.
	* compliant with FWCore reorganization in 140 series
	* based on evf::StateMachine provided by EventFilter/Utilities
	V00-12-00
	* runtime test shows PluginManager related segfault, to be
	investigated. 
	* for stopping and halting logic to function properly,
	edm::EventProcessor needs some fixes, Emilio is taking care of
	that.
	
	
2007-03-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* add boolean flag epInitialized_ which indicates to the
	initEventProcessor() method if any initalization is